--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 '*.mp4' filter=lfs diff=lfs merge=lfs -text
 „*.jpg filter=lfs diff=lfs merge=lfs -text
+cor.mp4 filter=lfs diff=lfs merge=lfs -text
